Fixed dialog centering on mobile

--- a/src/components/popup/popup.module.scss
+++ b/src/components/popup/popup.module.scss
@@ -28,7 +28,6 @@ $color-dialog-bg-mobile: $white-1;
   .popup-dialog {
     width: 240px;
     border-radius: 6px;
-    margin: 16px;
     background-color: $color-dialog-bg-mobile;
   }
 }
